Fix overflow issue with background image

--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,5 +1,6 @@
 .footer-container{
     /* position: relative; */
+    z-index: 1;
     background-color: #202527;
     width: 100%;
     height: 150px;
